apps/matrix/templates/element/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element
  labels:
    app.kubernetes.io/name: element
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: element
  template:
    metadata:
      labels:
        app.kubernetes.io/name: element
    spec:
      containers:
        - name: element
          image: vectorim/element-web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /app/config.json
              subPath: config.json
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: element-config
