apps/matrix/templates/element/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: element
  labels:
    app.kubernetes.io/name: element
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: element
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
