apps/matrix/templates/element/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: element
  namespace: matrix
  labels:
    app.kubernetes.io/name: element
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik.lab.paultibbetts.uk"
    gethomepage.dev/href: "https://element.lab.paultibbetts.uk"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Matrix web client
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: element.png
    gethomepage.dev/name: Element
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`element.lab.paultibbetts.uk`)
      kind: Rule
      services:
        - name: element
          port: http
  tls: {}
